<resources>
    <string name="app_name">Mobile Assignment</string>
</resources>
